Fix K 'Browse By Category' padding and wrap on min width

--- a/src/css/kb.css
+++ b/src/css/kb.css
@@ -101,8 +101,17 @@ body.landing.kb.kb-home .sectionbody {
   padding-right: 1rem;
 }
 
-body.landing.kb .doc .sectionbody .column {
+body.landing.kb.kb-home .flex .sectionbody .column {
   flex: 1 1 25%;
+  flex-wrap: wrap;
+  min-width: 13rem;
+}
+
+@media (min-width: 760px) {
+  body.landing.kb.kb-home .flex .sectionbody .column {
+    padding-left: 0;
+    padding-right: 2rem;
+  }
 }
 
 body.landing.kb .doc .sectionbody .column ul li a {
